# uuu-gui

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  UUUFlashTool.desktop  apppaths.cpp  apppaths.h  deviceitemwidget.cpp  deviceitemwidget.h  devicemonitor.cpp  devicemonitor.h  firmwarepreset.cpp  firmwarepreset.h  flashworker.cpp  flashworker.h  logdialog.cpp  logdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  presetdialog.cpp  presetdialog.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  uuuapp.desktop
.github/workflows/: build.yml  release.yml
cmake/: patch_libuuu.cmake
helper/: uuuhelper.cpp
icons/: UUUFlashTool.rc  generate.sh  uuuapp.icns  uuuapp.rc
translations/: UUUFlashTool_ru.qm  UUUFlashTool_ru.ts  translations.qrc  uuuapp_ru.qm  uuuapp_ru.ts
